--- a/smart-calendar/src/styles.scss
+++ b/smart-calendar/src/styles.scss
@@ -19,6 +19,7 @@ body {
 @import './assets/styles/_responsive';
 @import './assets/styles/_components';
 @import './assets/styles/_icon-fixes';
+@import './assets/styles/_focus';
 
 /* Global Styles */
 * {
