--- a/smart-calendar/src/assets/styles/_breakpoints.scss
+++ b/smart-calendar/src/assets/styles/_breakpoints.scss
@@ -1,3 +1,11 @@
+// Breakpoint variables
+$breakpoint-xs: 0;
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
+$breakpoint-xxl: 1400px;
+
 // Breakpoints para responsividade
 $breakpoints: (
   xs: 0,
