--- a/smart-calendar/src/styles.scss
+++ b/smart-calendar/src/styles.scss
@@ -20,6 +20,7 @@ body {
 @import './assets/styles/_components';
 @import './assets/styles/_icon-fixes';
 @import './assets/styles/_focus';
+@import './assets/styles/_animations';
 
 /* Global Styles */
 * {
